# calculator-lib

./: .pylintrc  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  SETUP.md  llms.txt  pyproject.toml
.claude/commands/: release-plan.md
docs/: release-plan-v0.1.0.md  release-plan-v0.1.1.md  release-plan-v0.1.2.md  release-plan-v0.1.3.md  release-plan-v0.1.4.md  release-plan-v0.1.5.md  release-plan-v0.1.6.md
src/calculator_lib/: __init__.py  calculator.py
tests/: test_calculator.py
