[project]
name = "calculator-lib-rubens"
keywords = ["math", "calculator", "utility"]
version = "0.1.6"
description = "A python calculator library."
authors = [
    {name = "Rubens Gomes",email = "rubens.s.gomes@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12.0,<4.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/rubensgomes/calculator-lib/"
Documentation = "https://github.com/rubensgomes/calculator-lib/"
Repository = "https://github.com/rubensgomes/calculator-lib/"

[tool.poetry]
packages = [{include = "calculator_lib", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["calculator_lib"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "coverage (>=7.13.5,<8.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
]

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
profile = "black"

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poe.tasks]
# Define individual cleanup tasks
_clean_cache = "poetry cache clear --all"
_clean_misc = "rm -rf  .mypy_cache dist build"
_clean_pyc = "find . -name '*.pyc' -delete"
_clean_pycache = "find . -name '__pycache__' -type d -exec rm -rf {} +"
_clean_pytest = "rm -rf .pytest_cache"
_clean_venv = "poetry env remove --all"
# Combine them into one 'clean' command
# Run command poetry run poe clean
clean = { sequence = ["_clean_cache", "_clean_misc", "_clean_pyc", "_clean_pycache", "_clean_pytest", "_clean_venv"], help = "Remove all project artifacts" }
